--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" href="css/about-mobile.css">
     <link rel="stylesheet" href="css/xsm.css">
     <script src="js/jquery-3.4.1.js"></script>
