--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" href="css/contact-mobile.css">
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/jquery-3.4.1.js"></script>
